--- a/wwwroot/css/ffHomepage.css
+++ b/wwwroot/css/ffHomepage.css
@@ -79,7 +79,6 @@ header{
     width: 0%;
     left: 50%;
 }
-
 /* Logo positioned on the right */
 header .logo{
     display: flex;
@@ -461,12 +460,17 @@ header .logo img{
     padding: 80px 0;
     overflow-x:hidden;
     scroll-snap-align: start;
+    scroll-snap-stop: always;
+}
+.main {
+    scroll-snap-align: start;
+    scroll-snap-stop: always;
+    min-height: 100vh;
 }
 /*for scrolling*/
 .container{
-    scroll-snap-type: y proximity;
+    scroll-snap-type: y mandatory;
     scroll-behavior: smooth;
-    height: 100vh
 }
 /* Section backgrounds */
 .section-about {
@@ -661,8 +665,7 @@ header .logo img{
     padding: 10px;
     font-family: "Poppins", sans-serif;
     font-size: 15px;
-    border-top: 1px solid #ccc;
-    margin-top: 2350px;  
+    border-top: 1px solid #ccc;;  
     display: flex;
     justify-content: space-between; 
 }
