DONE NA LAHAT PT.1

--- a/Pages/Index.cshtml
+++ b/Pages/Index.cshtml
@@ -55,7 +55,7 @@
             <!-- Logo on the right -->
            <a href="/user_account">
                 <figure class="logo">
-                    <img src="/images/logo.png" alt="PayFair Logo">
+                    <img src="/images/profile.png" alt="User Logo">
                 </figure>
             </a>
 
