--- a/Pages/user_account.cshtml
+++ b/Pages/user_account.cshtml
@@ -31,7 +31,7 @@
     <h1 class="user-profile">User Profile</h1> <!--page heading-->
     <div class="user-pic-container">
         <div class="user-pic">
-            <img src="/images/user-pic.png"> <!--user default profile picture-->
+            <img src="/images/profile.png"> <!--user default profile picture-->
         </div>
         <button class="edit-profile">Edit profile</button>  <!--to edit user's profile-->
     </div>
