--- a/Pages/Index.cshtml
+++ b/Pages/Index.cshtml
@@ -52,21 +52,20 @@
         
         <!-- Empty middle section -->
         <div></div>
-            <!-- Logo on the right -->
+            <!-- User Logo on the right -->
            <a href="/user_account">
                 <figure class="logo">
                     <img src="/images/profile.png" alt="User Logo">
                 </figure>
             </a>
-
     </header>
 
     <main>
-        <section class="carousel next">
-            <div class="list">
-                
-                <article class="item other_1">
-                    <div class="main-content" 
+        <section class="carousel next">         <!-- carousel -->
+            <div class="list">       <!-- the contents inside the carousel -->
+                <article class="item other_1">   <!-- the first item inside the carousel -->
+                    <!--the actual content of the first slide-->
+                    <div class="main-content"               
                     style="background-color: #9c4d2f; background-image: url('/images/bg1.png'); background-size: cover; background-position: center;">
                         <div class="content">
                             <img src="/images/full logo.png" alt="PayFair Logo" class="title-image">
@@ -76,11 +75,13 @@
                             </p>
                         </div>
                     </div>
+                    <!-- the image on the right side -->
                     <figure class="image">
                         <img src="/images/pogs.png" alt="PayFair App Interface">
                     </figure>
                 </article>
 
+                <!-- the second slide, the first slide to show when the App is loaded -->
                 <article class="item active">
                     <div class="main-content" 
                     style="background-color: #f5bfaf; background-image: url('/images/bg2.png'); background-size: cover; background-position: center;">
@@ -98,6 +99,7 @@
                     </figure>
                 </article>
 
+                <!-- the third slide  -->
                 <article class="item other_2">
                     <div class="main-content" 
                     style="background-color: #dedfe1; background-image: url('/images/bg3.png'); background-size: cover; background-position: center;">
@@ -115,7 +117,7 @@
                 </article>
                 
             </div>
-            
+            <!-- the navigation arrows and pagination dots -->
             <div class="carousel-navigation">
                 <div class="arrows">
                     <button id="prev"><</button>
@@ -130,7 +132,9 @@
         </section>
     </main>
 
+     <!-- the javascript for sidebar and slider animations -->
     <script src="/js/ffHomepage.js"></script>
+
     <div class="container" id="scroll-container">
         <div class="animation-section section-about" id="aboutSection">
             <div class="section-title">ABOUT US</div>
@@ -492,7 +496,8 @@ document.addEventListener('keydown', (e) => {
     }
 });
     </script>
-
+    
+<!-- footer -->
     <footer class="app-footer"> 
         <p>Copyright© 2025 PayFair · All rights reserved
             <span class="footer-nav">
