SUPER FINAL PT2

--- a/Pages/ffDashboard.cshtml
+++ b/Pages/ffDashboard.cshtml
@@ -142,7 +142,7 @@
                             <div class="section">
                                 <div class="section-title">Breakdown</div>
                                 <div class="breakdown-item">
-                                    <span class="item-label">Base fare</span>
+                                    <span class="item-label">Regular fare</span>
                                     <span class="item-value" id="baseFare">XXXX</span>
                                 </div>
                                 <div class="breakdown-item">
