github ask to commit cuz i cant pull

--- a/Pages/signUp.cshtml
+++ b/Pages/signUp.cshtml
@@ -4,7 +4,7 @@
     Layout = "_Layout";
 }
 @section Styles {
-    <link rel="stylesheet" href="/css/signUp.css" />
+    <link rel="stylesheet" href="/css/log-in.css" />
 }
 
 <!DOCTYPE html>
@@ -54,7 +54,7 @@
         </form>
         
         <div class="signup-section">
-            Already have an account? <a href="log-in.cshtml" class="signup-link">Log In</a>
+            Already have an account? <a href="/log-in" class="signup-link">Log In</a>
         </div>
     </div>
 </body>
