--- a/Pages/user_account.cshtml
+++ b/Pages/user_account.cshtml
@@ -19,13 +19,13 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css" integrity="sha512-1ycn6IcaQQ40/MKBW2W4+0V8iIdNv0U+d7gRZnt9+wDTrvE9OQ9z8mNIUlTTMQQKO6oGpCgkFvZ5j8v7Zb1K2A==" crossorigin="anonymous" referrerpolicy="no-referrer" />
 
     <title>PayFair - Ride Easy, Pay Fairly</title>
-    <link rel="icon" href="/images/logo.png" type="image/png">
-    <link rel="stylesheet" href="/css/user_account.css">
+    <link rel="icon" href="logo.png" type="image/png">
+    <link rel="stylesheet" href="user_account.css">
 </head>
 <body>
     <!--logo layout and navigates to homepage-->
     <figure class="logo">
-        <a href="/"><img src="/images/logo.png" alt="PayFair Logo"></a>
+            <a href="/Index"><img src="/images/logo.png" alt="PayFair Logo"></a>
     </figure>
 
     <h1 class="user-profile">User Profile</h1> <!--page heading-->
@@ -33,7 +33,7 @@
         <div class="user-pic">
             <img src="/images/user-pic.png"> <!--user default profile picture-->
         </div>
-        <div>Edit profile</div> 
+        <button class="edit_profile">Edit profile</button>  <!--to edit user's profile-->
     </div>
     <a href="/log-in"> <!--navigate to log in when signed out-->
         <button class="sign-out-btn">
@@ -51,6 +51,10 @@
             <span class="user-info-label">Email</span> <!--label in email field-->
             <span class="user-info-value">Email</span> <!--user's email-->
         </div>
+    </div>
+
+
+
     </div>
 
     <div class="history-container"> <!--for history-->
@@ -73,14 +77,15 @@
         </table>
     </div>
 
+
 </body>
 <footer class="app-footer"> <!--footer-->
     <p>Copyright© 2025 PayFair · All rights reserved
         <span class="footer-nav">
-            <a href="/#aboutSection">About Us |</a>
-            <a href="/#tncSection">Terms and Conditions |</a>
-            <a href="/#privacySection">Privacy Policy |</a>
-            <a href="/#contactSection">Contact Us</a>
+            <a href="ffHomepage.html#aboutSection">About Us |</a>
+            <a href="ffHomepage.html#tncSection">Terms and Conditions |</a>
+            <a href="ffHomepage.html#privacySection">Privacy Policy |</a>
+            <a href="ffHomepage.html#contactSection">Contact Us</a>
         </span> 
     </p>
 </footer>
