--- a/wwwroot/css/log-in.css
+++ b/wwwroot/css/log-in.css
@@ -1,6 +1,6 @@
 body {
             background-color: white; 
-            background-image: url('loginbg.png');
+            background-image: url('/images/loginbg.png');
             background-size: cover;
             background-position: center;
             background-repeat: no-repeat;
