--- a/Pages/ffDashboard.cshtml
+++ b/Pages/ffDashboard.cshtml
@@ -664,7 +664,7 @@
             const request = {
                 origin: origin.geometry.location,
                 destination: destination.geometry.location,
-                travelMode: google.maps.TravelMode.TRANSIT,
+                travelMode: google.maps.TravelMode.DRIVING,
                 optimizeWaypoints: true
             };
 
