--- a/Pages/ffDashboard.cshtml
+++ b/Pages/ffDashboard.cshtml
@@ -52,7 +52,7 @@
 <div class="container">
     <div class="sidebar" id="sidebar">
         <div class="sidebar-header">
-            <a href="/Index" class="app-title">PayFair</a>
+            <a href="Pages/Terms.cshtml" class="app-title">PayFair</a>
         </div>
 
         <div class="tabs-container">
