added forgot password

--- a/Pages/log-in.cshtml
+++ b/Pages/log-in.cshtml
@@ -18,6 +18,9 @@
         <div class="form-group">
             <input type="password" class="form-input" name="Input.Password" placeholder="Password" required />
         </div>
+        <div class="forgot-pass-btn-wrapper">
+            <a href="/forgotPass.cshtml" class="=forgot-pass-btn">Forgot Password</a>
+        </div>
         <div class="login-btn-wrapper">
             <button type="submit" class="login-btn">Log in</button>
         </div>
